# gm-lab

./: .env.example  .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  README.ru.md  THIRD_PARTY_NOTICES.md  agents.py  codex_client.py  codex_oauth.py  codex_transcribe.py  config.py  dialog_store.py  gm_tools_guide.md  index.html  index.legacy.html  llm_client.py  long_session_gpt54_last.json  long_session_gpt54_postfix_short.json  mock_server.py  npc_architecture_plan.html  npc_card_memory_design.md  npc_free_rp_test_scenarios.md  orchestrator.py  prompt_cache_architecture.md  prompts.py  rag.py  requirements.txt  run.cmd  run.ps1  run_scene_trial.py  runtime_settings.py  selfplay_gpt54_live.json  selfplay_gpt54_profile_probe.json  server.py  setup.cmd  setup.ps1  smoke.py  stories.py  (+13 more)
crates/gml-agents/: Cargo.toml
crates/gml-agents/src/: architect_runner.rs  character.rs  character_architect.rs  coerce.rs  gm.rs  lib.rs  location.rs  npc.rs  seed.rs  story_architect.rs  tool_guidance.rs  tools.rs  world_architect.rs
crates/gml-agents/tests/: golden.rs  npc_card.rs
crates/gml-app/: Cargo.toml  build.rs  tauri.conf.json
crates/gml-app/capabilities/: default.json
crates/gml-app/icons/: icon.icns
crates/gml-app/src/: main.rs
crates/gml-audio/: Cargo.toml
crates/gml-audio/src/: lib.rs  proc.rs  sidecar.rs  stt.rs  tts.rs
crates/gml-codex/: Cargo.toml
crates/gml-codex/src/: client.rs  connector.rs  install_id.rs  lib.rs  oauth.rs  responses.rs  stream.rs
crates/gml-config/: Cargo.toml
crates/gml-config/src/: config.rs  lib.rs  runtime_settings.rs
crates/gml-llm/: Cargo.toml
crates/gml-llm/src/: backend.rs  connector.rs  factory.rs  identity.rs  json_helpers.rs  lib.rs  mock.rs  openai_compat.rs  parsing.rs  response_language.rs
crates/gml-llm/tests/: payload_gating.rs
crates/gml-mock-server/: Cargo.toml
crates/gml-mock-server/src/: main.rs
crates/gml-openai-compatible/: Cargo.toml
crates/gml-openai-compatible/src/: client.rs  connector.rs  lib.rs
crates/gml-openai-compatible/tests/: payload_gating.rs
crates/gml-orchestrator/: Cargo.toml
crates/gml-orchestrator/src/: compact.rs  content_locale.rs  helpers.rs  lib.rs  memory_crystals.rs  model_text.rs  query_dedup.rs  rag.rs  session.rs  session_payload.rs  travel_geography.rs  turn.rs  worldstate.rs
crates/gml-orchestrator/tests/: canon_live_path.rs  canon_payload.rs  canon_tools_dispatch.rs  contracts_ask_player.rs  contracts_compaction.rs  contracts_legacy_resume.rs  contracts_memory_crystals.rs  contracts_session_lifecycle.rs  contracts_two_channel.rs  contracts_worldstate.rs  golden_turns.rs  travel_to_dispatch.rs
crates/gml-persistence/: Cargo.toml
crates/gml-persistence/src/: character_store.rs  chat_search.rs  lib.rs  visual_assets.rs  world_store.rs
crates/gml-persistence/tests/: chat_search.rs  roundtrip.rs
crates/gml-prompts/: Cargo.toml  build.rs
crates/gml-prompts/assets/: GM_SYSTEM.txt  NPC_COMPACT_SYSTEM.txt  NPC_SYSTEM_TEMPLATE.txt
crates/gml-prompts/prompts/: README.md
crates/gml-prompts/prompts/architects/character/: base_unavailable.prompt.md  draft_success.prompt.md  story_reference.prompt.md  system.prompt.md  world_reference.prompt.md
crates/gml-prompts/prompts/architects/shared/: edit_success.prompt.md
crates/gml-prompts/prompts/architects/story/: draft_success.prompt.md  system.prompt.md  world_reference.prompt.md
crates/gml-prompts/prompts/architects/world/: draft_success.prompt.md  system.prompt.md
crates/gml-prompts/prompts/generators/character/: system.prompt.md  user.prompt.md
crates/gml-prompts/prompts/generators/location/: system.prompt.md  (+1 more)
crates/gml-prompts/prompts/gm/: compact_system.prompt.md  options_notice.prompt.md  player_action.prompt.md  prelude_system.prompt.md  prelude_user.prompt.md  proper_nouns_rule.prompt.md  story_summary.prompt.md  system.prompt.md  tool_schema_next.prompt.md  tool_search_next.prompt.md  world_setup.prompt.md  world_snapshot.prompt.md
crates/gml-prompts/prompts/npc/: card.prompt.md  compact_system.prompt.md  private_memory.prompt.md  system_template.prompt.md  turn_user.prompt.md
crates/gml-prompts/prompts/orchestrator/: memory_crystal.prompt.md  npc_final_instruction.prompt.md  npc_final_model_rule.prompt.md  npc_final_payload_rule.prompt.md  visible_continuation_reminder.prompt.md
crates/gml-prompts/prompts/rag/: query.prompt.md  query_task.prompt.md
crates/gml-prompts/prompts/seed/: scene_delta_system.prompt.md  scene_delta_user.prompt.md  world_repair_user.prompt.md  world_system.prompt.md
crates/gml-prompts/prompts/shared/: json_object_input_hint.prompt.md  response_language.prompt.md
crates/gml-prompts/src/: catalog.rs  lib.rs
crates/gml-rag/: Cargo.toml
crates/gml-rag/src/: cache.rs  client.rs  doc.rs  engine.rs  error.rs  lib.rs  retrieve.rs  tokenize.rs  vector.rs
crates/gml-rag/tests/: fixtures.rs  phase_a.rs
crates/gml-server/: Cargo.toml
crates/gml-server/src/: lib.rs  openai_key.rs  payload.rs  search.rs  share.rs  sys_tokens.rs  tls.rs
crates/gml-server/tests/: contract.rs  sys_tokens.rs
crates/gml-stories/: Cargo.toml
crates/gml-stories/src/: catalog.en.json  catalog.json  lib.rs  story_store.rs
crates/gml-stories/tests/: canon_projection.rs
crates/gml-supergrok/: Cargo.toml
crates/gml-supergrok/src/: client.rs  config.rs  connector.rs  image.rs  lib.rs  oauth.rs  protocol.rs  stream.rs  stt.rs
crates/gml-world/: Cargo.toml
crates/gml-world/src/: dice.rs  helpers.rs  lib.rs  model.rs  public_state.rs  rng.rs  seed.rs  state_record.rs  world.rs
crates/gml-world/src/canon/: action.rs  engine.rs  entity.rs  event_log.rs  ids.rs  knowledge.rs  lore.rs  memory.rs  mod.rs  navigation.rs  place.rs  region.rs  rumor.rs  transition.rs  travel.rs  validator.rs  view.rs  worldgen.rs
crates/gml-world/tests/: canon.rs  dice.rs  districts.rs  dynamic_passages.rs  dynamic_roster.rs  exit_labels.rs  items.rs  living_world.rs  memory_crystals.rs  model_projections.rs  navigation.rs  rng_vectors.rs  rumor_graph.rs  spells.rs  state_record_hash.rs
(+228 files in other folders)
