[package]
name = "gml-agents"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gml-types = { path = "../gml-types" }
gml-config = { path = "../gml-config" }
gml-prompts = { path = "../gml-prompts" }
gml-world = { path = "../gml-world" }
gml-llm = { path = "../gml-llm" }
serde_json = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
gml-stories = { path = "../gml-stories" }
serde = { workspace = true }
tempfile = { workspace = true }
