[package]
name = "gml-config"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
gml-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
