[package]
name = "gml-llm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gml-types = { path = "../gml-types" }
gml-prompts = { path = "../gml-prompts" }

serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
