[package]
name = "gml-openai-compatible"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
gml-config = { workspace = true }
gml-prompts = { workspace = true }
gml-llm = { workspace = true }

async-trait = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
