[package]
name = "gml-orchestrator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gml-types = { workspace = true }
gml-config = { workspace = true }
gml-prompts = { workspace = true }
gml-world = { workspace = true }
gml-stories = { workspace = true }
gml-rag = { workspace = true }
gml-agents = { workspace = true }
gml-llm = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
sha1 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
