[package]
name = "gml-persistence"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
gml-types = { path = "../gml-types" }
gml-config = { path = "../gml-config" }
gml-world = { path = "../gml-world" }
gml-orchestrator = { path = "../gml-orchestrator" }
gml-rag = { path = "../gml-rag" }
gml-llm = { path = "../gml-llm" }

serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
gml-mock = { workspace = true }
gml-stories = { path = "../gml-stories" }
tempfile = { workspace = true }
