[package]
name = "gml-prompts"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
gml-config = { workspace = true }
gml-types = { workspace = true }
minijinja = { workspace = true }
minijinja-embed = { workspace = true }
serde = { workspace = true }

[build-dependencies]
minijinja-embed = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
sha2 = { workspace = true }
