[package]
name = "gml-stories"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gml-types = { path = "../gml-types" }
gml-world = { path = "../gml-world" }
gml-config = { path = "../gml-config" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
