[package]
name = "gml-world"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
gml-types = { path = "../gml-types" }
gml-config = { path = "../gml-config" }
gml-prompts = { path = "../gml-prompts" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
getrandom = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
